--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,13 +30,13 @@ jobs:
           
       - name: build docker image
         run: |
-          docker build -t jdleiva21/myimage:0.0.1 .
-          docker build -t jdleiva21/latest .
+          docker build -t jdleiva21/myimage:0.0.2 .
+          docker build -t jdleiva21/myimage:latest .
           
       - name: push docker image
         run: |
-          docker push jdleiva21/myimage:0.0.1 
-          docker push jdleiva21/myimage
+          docker push jdleiva21/myimage:0.0.2 
+          docker push jdleiva21/myimage:latest
           
     #- name: Build the Docker image
      # run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
